style.css
/* ... */
@media (min-width: 1200px) {
    .central_mid{
        width:50%;
        max-width: 600px;
        min-height: 100%;
        margin: 0 auto;
        background-color:white;
        padding-left: 40px;
        padding-right: 40px;
        padding-top: 40px;
        padding-bottom: 40px;
    }
    .wrapper {
        display:none;
  }
  #testament_title {
          font-size: 2.07778em;
      }
      #headingBookNumber{
      top: 50;
  }
  .chapter_number {
      font-size: 2.25em;
    }
  .previousbutton {
    right: 50% !important;
    padding-right: 320px !important;
  }
  .nextbutton {
    left: 50% !important;
    padding-left: 320px !important;
  }
  #bookNum{
    right: 50% !important;
    padding-right: 220px !important;
  }
  #bookTitle{
    left: 50% !important;
    padding-left: 220px !important;
  }
  #headingBookNumber{
    font-size: 1em;
  }
  .book_pre_title {
      font-size: 1.6em;
  }
  .book_title {
      font-size: 2.77778em;
      }
      .book_post_title {
      font-size: 1.6em;
  }
    /*next button*/
  .nextbutton {
    height: 40px;
    width: 40px;
    position: fixed;
    z-index: 1;
    top: 40%;
    left: 75%;
    background-color: none;
    overflow-x: hidden;
    padding-top: 0px;
    padding-left: 20px;
    margin: 0 auto;
  }

  .next {
    background-color: #bbb;
    color: white;
    text-decoration: none;
    display: inline-block;
    padding: 8px 16px;
    border: 0px solid #fff;
    font-size:16px;
  }

  .round {
    border-radius: 0%;
  }

  .previousbutton {
    height: 40px;
    width: 40px;
    position: fixed;
    z-index: 1;
    top: 40%;
    right: 75%;
    background-color: none;
    overflow-x: hidden;
    padding-top: 0px;
    padding-right: 20px;
  }
  table {
      font-size: 2.125em;
  }
  nav .burger{
    display:none;
  }
}

#testament_title {
    display: inline-block;
    position: fixed;
    left: 0;
    top: 0;
    width: 100%;
    background-color: white;
    font-family: "PMingLiU-ExtB", serif;
    color:#999;
    font-variant: small-caps;
    line-height: 1.0;
    min-height: 70px;
    margin-bottom: 0;
    margin-left: 0;
    margin-right: 0;
    margin-top: 0;
    padding-bottom: 5;
    padding-left: 0;
    padding-right: 0;
    padding-top: 10;
    text-align: center;
    text-indent: 0pt;
    z-index: 1;
  }

#headingBookNumber{
    display: inline-block;
    position: fixed;
    left:0;
    width: 100%;
    background-color: white;
    font-family: "Oregon LDO", sans-serif;
    color:#999;
    font-variant: none;
    line-height: 1.0;
    padding-bottom: 5;
    padding-right: 0;
    padding-top: 5;
    text-align: center;
    text-indent: 0pt;
    border-bottom: 1px solid #999;
    z-index: 1;
}
#bookNum{
  min-width:220px;
}

#pt{
    text-align:center;
}

.book_pre_title {
    display: block;
    font-family: "PMingLiU-ExtB", serif;
    font-style: italic;
    font-variant: small-caps;
    line-height: 1.2;
    margin-bottom: 0;
    margin-left: 0;
    margin-right: 0;
    padding-bottom: 0;
    padding-left: 0;
    padding-right: 0;
    padding-top: 0;
    page-break-after: avoid;
    page-break-before: always;
    page-break-inside: avoid;
    text-align: center;
    text-indent: 0pt
    }
.book_title {
    display: block;
    font-family: "PMingLiU-ExtB", serif;
    font-variant: small-caps;
    font-weight: normal;
    letter-spacing: -0.7pt;
    line-height: 1.2;
    margin-bottom: 0;
    margin-left: 0;
    margin-right: 0;
    margin-top: 0;
    padding-bottom: 0;
    padding-left: 0;
    padding-right: 0;
    padding-top: 0;
    text-align: center
    }
.book_post_title {
    display: block;
    font-family: "PMingLiU-ExtB", serif;
    font-style: italic;
    font-variant: small-caps;
    line-height: 1.2;
    margin-bottom: 24pt;
    margin-left: 0;
    margin-right: 0;
    margin-top: 1pt;
    padding-bottom: 0;
    padding-left: 0;
    padding-right: 0;
    padding-top: 0;
    page-break-after: avoid;
    page-break-inside: avoid;
    text-align: center;
    text-indent: 0pt
    }
.verse_chapter_number {
    display: block;
    font-family: serif;
    font-size: 1em;
    line-height: 1.2;
    margin-bottom: 0;
    margin-left: 0;
    margin-right: 0;
    margin-top: 0;
    padding-bottom: 0;
    padding-left: 0;
    padding-right: 0;
    padding-top: 0;
    text-align: justify;
    text-indent: 40pt
    }
.section_title {
    color: #000;
    display: block;
    margin-bottom: 3.6pt;
    margin-left: 0;
    margin-right: 0;
    margin-top: 25pt;
    padding-bottom: 0;
    padding-left: 0;
    padding-right: 0;
    padding-top: 0;
    page-break-after: avoid;
    page-break-before: always;
    page-break-inside: avoid;
    text-align: center;
    text-indent: 5.75pt;
    font-size: 1.35em;
    }
.chapter_number {
    color: #000;
    display: block;
    font-family: "Oregon LDO", sans-serif;
    line-height: 1.0;
    margin-bottom: 0;
    margin-left: 0;
    margin-right: 0;
    margin-top: 0;
    padding-bottom: 0;
    padding-left: 0;
    padding-right: 0;
    padding-top: 0;
    page-break-after: avoid;
    text-align: justify;
    text-indent: 0
    }
.verse_one {
    display: block;
    font-family: serif;
    font-size: 1em;
    line-height: 1.2;
    margin-bottom: 0;
    margin-left: 0;
    margin-right: 0;
    margin-top: 0;
    padding-bottom: 0;
    padding-left: 0;
    padding-right: 0;
    padding-top: 0;
    text-align: justify;
    text-indent: 0
    }

.block_22(one case) {
    color: #000;
    display: block;
    font-family: "Times New Roman", serif;
    font-size: 0.88889em;
    margin-bottom: 0;
    margin-left: 0;
    margin-right: 1em;
    margin-top: 0;
    padding-bottom: 0;
    padding-left: 0;
    padding-right: 0;
    padding-top: 0;
    text-align: left;
    text-indent: 0
    }
/* ... */

